k8s/client/deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: client-deployment
  namespace: cab-booking
  labels:
    app: client

spec:
  replicas: 2

  selector:
    matchLabels:
      app: client

  template:
    metadata:
      labels:
        app: client

    spec:
      serviceAccountName: client-sa

      containers:
        - name: client

          image: itsmeveee/cab-booking-client:latest

          imagePullPolicy: Always

          ports:
            - containerPort: 80

          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"

            limits:
              cpu: "500m"
              memory: "512Mi"

          livenessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 10
            periodSeconds: 10

          readinessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 5
            periodSeconds: 5
